Fix color contrast in case studies

--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -39,6 +39,7 @@ $green: #72DC8A;
 
 $blue: #073EF5;
 $blue-light: #5ACAFA;
+$purple: #7A31F5;
 
 $yellow: #F7CF46;
 
