--- a/assets/css/modules/_post.scss
+++ b/assets/css/modules/_post.scss
@@ -246,7 +246,7 @@
 
   &.tag--case-studies:before,
   &.tag--caseStudies:before {
-    background: $blue-light;
+    background: $purple;
   }
   &.tag--guides:before  {
     background: $blue;
